--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/sweetalert.min.css">
+	<link rel="stylesheet" type="text/css" href="plugin/css/jquery-confirm.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
@@ -86,8 +86,7 @@
 	</script>
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
-	<script src="js/sweetalert.min.js"></script>
-
+	<script src="plugin/js/jquery-confirm.js"></script>
 
 </body>
 </html>
