--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="contact3-form-radio m-r-42">
 							<input class="input-radio3" id="radio1" type="radio" name="choice" value="say-hi" checked="checked">
 							<label class="label-radio3" for="radio1">
-								Hi Guest,
+								Hello Guest,
 							</label>
 						</div>
 					</div>
